--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./app.js",
     "dev": "NODE_ENV=development nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/tests.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,8 @@
     "nodemon": "^1.18.9"
   },
   "devDependencies": {
-    "eslint": "^5.12.0"
+    "chai": "^4.2.0",
+    "eslint": "^5.12.0",
+    "mocha": "^5.2.0"
   }
 }
